sas-core/main/default/objects/Case/fields/Acceptable_Target_Department__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Target_Department__c</fullName>
    <label>Acceptable Target Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Customer Claim</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>EuroBonus</fullName>
            </value>
            <value>
                <fullName>Group Sales</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Refunds OC KANA</fullName>
            </value>
            <value>
                <fullName>SAS Operating Center</fullName>
            </value>
            <value>
                <fullName>Charge Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>