sas-core/main/default/objects/Case/fields/Acceptable_Target_Team__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Target_Team__c</fullName>
    <label>Acceptable Target Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Acceptable_Target_Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>Backoffice</fullName>
            </value>
            <value>
                <fullName>Backoffice Sitel</fullName>
            </value>
            <value>
                <fullName>Bank Payment</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>BOM ARC</fullName>
            </value>
            <value>
                <fullName>BOM BSP</fullName>
            </value>
            <value>
                <fullName>BOM Customer Care</fullName>
            </value>
            <value>
                <fullName>BOM Error Handling</fullName>
            </value>
            <value>
                <fullName>BOM Forms Customer</fullName>
            </value>
            <value>
                <fullName>BOM Forms Travel Agent</fullName>
            </value>
            <value>
                <fullName>BOM Forsvaret</fullName>
            </value>
            <value>
                <fullName>BOM General</fullName>
            </value>
            <value>
                <fullName>BOM Groups</fullName>
            </value>
            <value>
                <fullName>BOM IOM</fullName>
            </value>
            <value>
                <fullName>BOM Reminders</fullName>
            </value>
            <value>
                <fullName>BOM Tenured</fullName>
            </value>
            <value>
                <fullName>BOM Voucher</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Businesstravel STO</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
                <label>Claims Escalations</label>
            </value>
            <value>
                <fullName>Compensation Card</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>