sas-core/main/default/objects/Case/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <description>Used for the chargeback team to understand who is the acquirer for the chargeback</description>
    <label>Acquirer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>Bambora</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Klarna</fullName>
            </value>
            <value>
                <fullName>Nets</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>SEB/Diners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>