sas-core/main/default/objects/Case/fields/ADM_Number__c.field-meta.xml
<CustomField>
    <fullName>ADM_Number__c</fullName>
    <description>Used for charge back</description>
    <label>ADM Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>