sas-core/main/default/objects/Case/fields/Approver_group__c.field-meta.xml
<CustomField>
    <fullName>Approver_group__c</fullName>
    <label>Approver group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>