sas-core/main/default/objects/Case/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>IF(ISBLANK(Owner:Queue.Id), Owner:User.FirstName & " " & Owner:User.LastName, Owner:Queue.QueueName)</formula>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>