sas-core/main/default/objects/Case/fields/CB_Type_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>CB_Type_of_Sale__c</fullName>
    <description>Used for charge back to understand what was the point of sale.</description>
    <label>CB - Type of Sale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Direct Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>