sas-core/main/default/objects/Case/fields/Charge_Back_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Back_Amount__c</fullName>
    <description>Used to specify the amount for claimed charge back</description>
    <label>Charge Back Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>