sas-core/main/default/objects/Case/fields/Charge_Back_Coding__c.field-meta.xml
<CustomField>
    <fullName>Charge_Back_Coding__c</fullName>
    <description>Used as a &quot;coding&quot; text field for charge back.</description>
    <label>Charge Back Coding</label>
    <length>150</length>
    <type>Text</type>
</CustomField>