sas-core/main/default/objects/Case/fields/Charge_Back_Currency__c.field-meta.xml
<CustomField>
    <fullName>Charge_Back_Currency__c</fullName>
    <description>Used to mark which currency is being used in the charge back case</description>
    <label>Charge Back Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>