sas-core/main/default/objects/Case/fields/Charge_Back_Reason__c.field-meta.xml
<CustomField>
    <fullName>Charge_Back_Reason__c</fullName>
    <label>Charge Back Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>127 - Does Not Recognize / Remember / No Knowledge</fullName>
            </value>
            <value>
                <fullName>13.1 - Credit Not Processed</fullName>
            </value>
            <value>
                <fullName>13.6 - Merchandise / Service not received</fullName>
            </value>
            <value>
                <fullName>13.7 - Cancelled Merchandise</fullName>
            </value>
            <value>
                <fullName>155 - Not Received</fullName>
            </value>
            <value>
                <fullName>193 -  Fraud</fullName>
            </value>
            <value>
                <fullName>29 - Fraud</fullName>
            </value>
            <value>
                <fullName>4507 - Incorrect Transaction Amount or Account Number Presented</fullName>
            </value>
            <value>
                <fullName>4512 - Multiple Processing</fullName>
            </value>
            <value>
                <fullName>4513 - Credit Not Presented</fullName>
            </value>
            <value>
                <fullName>4516 - Request For Support Illegible/Insufficient</fullName>
            </value>
            <value>
                <fullName>4521 - Invalid Authorisation</fullName>
            </value>
            <value>
                <fullName>4523 - Unassigned Card Member Account Number</fullName>
            </value>
            <value>
                <fullName>4530 - Currency Discrepancy</fullName>
            </value>
            <value>
                <fullName>4540 - Card Not Present</fullName>
            </value>
            <value>
                <fullName>4544 - Cancellation of Recurring Goods/Services</fullName>
            </value>
            <value>
                <fullName>4533 - Not As Described Or Defective Merchandise</fullName>
            </value>
            <value>
                <fullName>4554 - Goods And Services Not Received</fullName>
            </value>
            <value>
                <fullName>4752 - Processing Error</fullName>
            </value>
            <value>
                <fullName>4755 - No Valid Authorization</fullName>
            </value>
            <value>
                <fullName>4853 - Dispute Defective/N</fullName>
            </value>
            <value>
                <fullName>6003 - Chargeback Documentation Needed</fullName>
            </value>
            <value>
                <fullName>6006 - Card Member Claims Fraud</fullName>
            </value>
            <value>
                <fullName>6008 - Card member Requests Proof Of Transaction</fullName>
            </value>
            <value>
                <fullName>6014 - Card Member Does Not Recognise Transaction Or Transaction Amount</fullName>
            </value>
            <value>
                <fullName>6016 - Card Member Needs Documentation For Personal Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>