sas-core/main/default/objects/Case/fields/Charge_Back_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Back_Type__c</fullName>
    <description>The type of claim that have been issued for Charge back</description>
    <label>Charge Back Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>IQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>