sas-core/main/default/objects/Case/fields/Compensation_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Reject_Reason__c</fullName>
    <label>Compensation Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Airport and governmental authorities</fullName>
            </value>
            <value>
                <fullName>Air traffic flow management</fullName>
            </value>
            <value>
                <fullName>ATC</fullName>
            </value>
            <value>
                <fullName>Bird Strike</fullName>
            </value>
            <value>
                <fullName>Boarding &amp; De-Boarding of Disabled passenger</fullName>
            </value>
            <value>
                <fullName>Cancelation done 14 days prior</fullName>
            </value>
            <value>
                <fullName>Claim outside Time Limit</fullName>
            </value>
            <value>
                <fullName>Delay less than 2 hrs. for canceled flight</fullName>
            </value>
            <value>
                <fullName>Delay less than 3 hrs. for delayed flight</fullName>
            </value>
            <value>
                <fullName>Duplicate case</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Industrial Strike</fullName>
            </value>
            <value>
                <fullName>Lighting Strike</fullName>
            </value>
            <value>
                <fullName>Non Operation carrier</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>