sas-core/main/default/objects/Case/fields/Contact_Information_TeamLead__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_TeamLead__c</fullName>
    <description>Contact information to Team Lead to be displayed for Functional Product Support.</description>
    <label>Contact Information Team Lead</label>
    <type>TextArea</type>
</CustomField>