sas-core/main/default/objects/Case/fields/DateTimeIssue__c.field-meta.xml
<CustomField>
    <fullName>DateTimeIssue__c</fullName>
    <label>Date and Time of Issue</label>
    <type>DateTime</type>
</CustomField>