sas-core/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <description>The department responsible for this case</description>
    <inlineHelpText>The department responsible for this case</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agent Helpdesk</fullName>
            </value>
            <value>
                <fullName>Care</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Customer Claim</fullName>
            </value>
            <value>
                <fullName>Digital Channel Support</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>EuroBonus</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Functional Product Support</fullName>
            </value>
            <value>
                <fullName>Group Sales</fullName>
            </value>
            <value>
                <fullName>Info Hub</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Refunds OC KANA</fullName>
            </value>
            <value>
                <fullName>Sales Control BOM</fullName>
            </value>
            <value>
                <fullName>SAS Operating Center</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
                <isActive>false</isActive>
                <label>SME</label>
            </value>
            <value>
                <fullName>SoMe Support</fullName>
            </value>
            <value>
                <fullName>Telephony</fullName>
            </value>
            <value>
                <fullName>Vendor Management</fullName>
            </value>
             <value>
                <fullName>Charge Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>