sas-core/main/default/objects/Case/fields/Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date__c</fullName>
    <description>Used for charge back to understand when the case is due</description>
    <label>Exp. Date</label>
    <type>Date</type>
</CustomField>