sas-core/main/default/objects/Case/fields/Expenses_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Reject_Reason__c</fullName>
    <label>Expenses Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Delay less than 2 hrs</fullName>
            </value>
            <value>
                <fullName>Duplicate case</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Loss of income</fullName>
            </value>
            <value>
                <fullName>Parking Expenses</fullName>
            </value>
            <value>
                <fullName>Prebooked &amp; Prepaid Expenses</fullName>
            </value>
            <value>
                <fullName>Rental Car - Prebooked</fullName>
            </value>
            <value>
                <fullName>Voluntry Cancelation of rebooked flight with SAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>