sas-core/main/default/objects/Case/fields/External_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Number__c</fullName>
    <description>Charge back external reference case number</description>
    <label>External Case Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>