sas-core/main/default/objects/Case/fields/FCS_CaseResolution__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseResolution__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FCS_Case_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>According to rules</fullName>
            </value>
            <value>
                <fullName>Acquirer</fullName>
            </value>
            <value>
                <fullName>Activate Profile</fullName>
            </value>
            <value>
                <fullName>Add CC</fullName>
            </value>
            <value>
                <fullName>Add travel pass</fullName>
            </value>
            <value>
                <fullName>Agent did not contact AH first</fullName>
            </value>
            <value>
                <fullName>Agreement related question</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Allowance</fullName>
            </value>
            <value>
                <fullName>Already refunded</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Answer from AH not accepted</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Authorities</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
                <isActive>false</isActive>
                <label>Authorization</label>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>AVIH/PETC</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Big/Supersale</fullName>
            </value>
            <value>
                <fullName>Blocked IP address</fullName>
                <isActive>false</isActive>
                <label>Blocked IP address</label>
            </value>
            <value>
                <fullName>Booking Confirmation</fullName>
            </value>
            <value>
                <fullName>Booking flow</fullName>
            </value>
            <value>
                <fullName>Booking related</fullName>
            </value>
            <value>
                <fullName>Booking rules</fullName>
            </value>
            <value>
                <fullName>Bug/User story created</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>