sas-core/main/default/objects/Case/fields/FCS_CaseType__c.field-meta.xml
<CustomField>
    <fullName>FCS_CaseType__c</fullName>
    <complianceGroup>WipeRetain</complianceGroup>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Cancellation &amp; Refunds</fullName>
            </value>
            <value>
                <fullName>Changes</fullName>
            </value>
            <value>
                <fullName>Charge Back</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Digital Channel</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Error Handling</fullName>
            </value>
            <value>
                <fullName>EuroBonus</fullName>
            </value>
            <value>
                <fullName>EuroBonus Partner</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Irregularities</fullName>
            </value>
            <value>
                <fullName>New Booking</fullName>
            </value>
            <value>
                <fullName>Non-SAS Products</fullName>
            </value>
            <value>
                <fullName>Plusgrade</fullName>
            </value>
            <value>
                <fullName>Proration</fullName>
            </value>
            <value>
                <fullName>Puzzle</fullName>
            </value>
            <value>
                <fullName>Receive Customer Documentation</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Refund Handling</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAS for Business</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Special Service Request</fullName>
            </value>
            <value>
                <fullName>Ticketless</fullName>
            </value>
            <value>
                <fullName>Travel Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>