sas-core/main/default/objects/Case/fields/Feedback_Area__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Area__c</fullName>
    <label>Area</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>