sas-core/main/default/objects/Case/fields/Feedback_Comment__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>