sas-core/main/default/objects/Case/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility barrier</fullName>
            </value>
            <value>
                <fullName>SAS&apos; accessibility plan</fullName>
            </value>
            <value>
                <fullName>Other issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>