sas-core/main/default/objects/Case/fields/Financial_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Financial_Action_Date__c</fullName>
    <description>Chargeback Financial Action Date</description>
    <label>Financial Action Date</label>
    <type>Date</type>
</CustomField>