sas-core/main/default/objects/Case/fields/FPS_Choice_Entries_Rich__c.field-meta.xml
<CustomField>
    <fullName>FPS_Choice_Entries_Rich__c</fullName>
    <label>FPS Choice Entries Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>