sas-core/main/default/objects/Case/fields/LIA_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>LIA_Claim_Type__c</fullName>
    <description>Used to store Liabilty claim type related to case.</description>
    <formula>TEXT( LIA_Claim__r.Liability_Claim_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liability Claim Type</label>
    <type>Text</type>
</CustomField>