sas-core/main/default/objects/Case/fields/ML_Anomaly_Score__c.field-meta.xml
<CustomField>
    <fullName>ML_Anomaly_Score__c</fullName>
    <inlineHelpText>Only specified if &quot;Fraud Label&quot; is not 0</inlineHelpText>
    <label>ML Anomaly Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>