sas-core/main/default/objects/Case/fields/ML_Arrival_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>ML_Arrival_Airport_Code__c</fullName>
    <label>ML Arrival Airport Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>