sas-core/main/default/objects/Case/fields/ML_Bank_Account_Number_Occurance_24h__c.field-meta.xml
<CustomField>
    <fullName>ML_Bank_Account_Number_Occurance_24h__c</fullName>
    <label>ML Bank Account Number Occurance 24h</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>